<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

        <ImageView
            android:id="@+id/iv_color_palette"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/hue_palette"
            android:layout_marginTop="16dp"
            android:src="@drawable/colordialog_huepalette"
            android:scaleType="fitCenter"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/opacity"
            android:textSize="12sp"
            android:textColor="#E6C15C"/>
        <SeekBar
            android:id="@+id/sb_opacity"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:thumb="@drawable/colordialog_thumb"
            android:padding="8dp"
            android:max="255"
            android:min="0"
            />
        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/saturation"
            android:textSize="12sp"
            android:textColor="#E6C15C"/>
        <SeekBar
            android:id="@+id/sb_saturation"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:thumb="@drawable/colordialog_thumb"
            android:padding="8dp"
            android:min="0"
            android:max="100"/>
        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/brightness"
            android:textSize="12sp"
            android:textColor="#E6C15C"/>
        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:thumb="@drawable/colordialog_thumb"
            android:padding="8dp"
            android:min="0"
            android:max="100"/>
        <TextView
            android:id="@+id/tv_preview"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="18sp"
            android:textColor="#E6C15C"/>

</LinearLayout>