<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_weight="1">
    <TextView
        android:id="@+id/tv_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/red"
        android:textSize="12sp"
        android:textColor="#E6C15C"/>
    <SeekBar
        android:id="@+id/sb_red"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:thumb="@drawable/colordialog_thumb"
        android:progressDrawable="@drawable/colordialog_red"
        android:padding="8dp"
        android:max="255"
        android:min="0"
        />
    <TextView
        android:id="@+id/tv_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/green"
        android:textSize="12sp"
        android:textColor="#E6C15C"/>
    <SeekBar
        android:id="@+id/sb_green"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:thumb="@drawable/colordialog_thumb"
        android:progressDrawable="@drawable/colordialog_green"
        android:padding="8dp"
        android:min="0"
        android:max="255"/>
    <TextView
        android:id="@+id/tv_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/blue"
        android:textSize="12sp"
        android:textColor="#E6C15C"/>
    <SeekBar
        android:id="@+id/sb_blue"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:thumb="@drawable/colordialog_thumb"
        android:progressDrawable="@drawable/colordialog_blue"
        android:padding="8dp"
        android:min="0"
        android:max="255"/>
    <TextView
        android:id="@+id/tv_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/alpha"
        android:textSize="12sp"
        android:textColor="#E6C15C"/>
    <SeekBar
        android:id="@+id/sb_alpha"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:thumb="@drawable/colordialog_thumb"
        android:padding="8dp"
        android:min="0"
        android:max="255"/>
    <TextView
        android:id="@+id/tv_preview2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18sp"
        android:textColor="#E6C15C"/>
</LinearLayout>