<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/palette"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tab_selector1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tab_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/rgb"
                android:textColor="#000000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tab_selector2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000000"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/palette_layout"
        layout="@layout/colordialog_color_palette" />

    <include android:id="@+id/rgb_layout"
        layout="@layout/colordialog_rgb"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:text="@string/cancel"
            android:elevation="0dp"
            android:background="@drawable/dialog_button"
            />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:text="@string/ok"
            android:elevation="0dp"
            android:background="@drawable/dialog_button"
            />
    </LinearLayout>
</LinearLayout>
